Add new function to commit CC. Structure orderer and peer info more cleanly.
